@@ -1,5 +1,12 @@
 package no.nav.melosys.service.persondata.familie;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
+
 import no.nav.melosys.domain.Aktoer;
 import no.nav.melosys.domain.Behandling;
 import no.nav.melosys.domain.Fagsak;
@@ -13,14 +20,8 @@ import no.nav.melosys.integrasjon.pdl.dto.person.adresse.Bostedsadresse;
 import no.nav.melosys.integrasjon.pdl.dto.person.adresse.Vegadresse;
 import org.jetbrains.annotations.NotNull;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
-
 import static no.nav.melosys.domain.kodeverk.Aktoersroller.BRUKER;
+import static no.nav.melosys.integrasjon.pdl.dto.Endringstype.KORRIGER;
 import static no.nav.melosys.integrasjon.pdl.dto.Endringstype.OPPRETT;
 
 public class FamiliemedlemObjectFactory {
@@ -38,144 +39,138 @@ public class FamiliemedlemObjectFactory {
 
     public static Person lagHovedpersonMedBarn() {
         return new Person(
-                Collections.emptySet(),
-                Set.of(lagNorskBostedsadresse()),
-                Collections.emptySet(),
-                Set.of(lagFødselsdatoForVoksen()),
-                Set.of(new Folkeregisteridentifikator(IDENT_HOVEDPERSON, lagAktivMetadata())),
-                Collections.emptySet(),
-                lagForelderBarnRelasjoner(),
-                Collections.emptySet(),
-                Set.of(new Kjoenn(KjoennType.MANN, lagAktivMetadata())),
-                Collections.emptySet(),
-                Set.of(new Navn("KARAFFEL", "", "TRIVIELL", lagAktivMetadata())),
-                Collections.emptySet(),
-                Set.of(
-                        new Sivilstand(Sivilstandstype.GIFT,
-                                IDENT_PERSON_GIFT,
-                                LocalDate.of(2011, 2, 2),
-                                null,
-                                lagAktivMetadata(toLocalDateTime("2020-12-05T08:32:21"))),
-                        new Sivilstand(Sivilstandstype.GIFT,
-                                IDENT_PERSON_GIFT_HISTORISK,
-                                LocalDate.of(2019, 8, 3),
-                                null,
-                                lagAktivMetadata(toLocalDateTime("2022-04-27T14:57:56"))),
-                        new Sivilstand(Sivilstandstype.SEPARERT,
-                                IDENT_PERSON_GIFT_HISTORISK,
-                                LocalDate.of(2013, 1, 3),
-                                null,
-                                lagHistoriskMetadata(toLocalDateTime("2022-04-28T13:28:43"))),
-                        new Sivilstand(Sivilstandstype.SKILT,
-                                NULL_IDENT_NÅR_SKILT,
-                                LocalDate.of(2014, 4, 9),
-                                null,
-                                lagHistoriskMetadata(toLocalDateTime("2022-05-04T12:20:45")))
-                ),
-                Set.of(new Statsborgerskap("NOR", LocalDate.parse("2021-05-08"), null, null, lagAktivMetadata(LocalDateTime.MAX))),
-                Collections.emptySet());
+            Collections.emptySet(),
+            Set.of(lagNorskBostedsadresse()),
+            Collections.emptySet(),
+            Set.of(lagFødselsdatoForVoksen()),
+            Set.of(new Folkeregisteridentifikator(IDENT_HOVEDPERSON, lagAktivMetadata())),
+            Collections.emptySet(),
+            lagForelderBarnRelasjoner(),
+            Collections.emptySet(),
+            Set.of(new Kjoenn(KjoennType.MANN, lagAktivMetadata())),
+            Collections.emptySet(),
+            Set.of(new Navn("KARAFFEL", "", "TRIVIELL", lagAktivMetadata())),
+            Collections.emptySet(),
+            lagSivilstandForHovedperson(),
+            Set.of(new Statsborgerskap("NOR", LocalDate.parse("2021-05-08"), null, null, lagAktivMetadata(LocalDateTime.MAX))),
+            Collections.emptySet());
+    }
+
+    public static Person lagHovedpersonMedBarn_medKorrigertGiftSeparertSkiltPåSammeDato() {
+        return new Person(
+            Collections.emptySet(),
+            Set.of(lagNorskBostedsadresse()),
+            Collections.emptySet(),
+            Set.of(lagFødselsdatoForVoksen()),
+            Set.of(new Folkeregisteridentifikator(IDENT_HOVEDPERSON, lagAktivMetadata())),
+            Collections.emptySet(),
+            lagForelderBarnRelasjoner(),
+            Collections.emptySet(),
+            Set.of(new Kjoenn(KjoennType.MANN, lagAktivMetadata())),
+            Collections.emptySet(),
+            Set.of(new Navn("KARAFFEL", "", "TRIVIELL", lagAktivMetadata())),
+            Collections.emptySet(),
+            lagSivilstandForHovedperson_korrigertMedSammeDato(),
+            Set.of(new Statsborgerskap("NOR", LocalDate.parse("2021-05-08"), null, null, lagAktivMetadata(LocalDateTime.MAX))),
+            Collections.emptySet());
     }
 
     public static Person lagHovedperson() {
         return new Person(
-                Collections.emptySet(),
-                Set.of(lagNorskBostedsadresse()),
-                Collections.emptySet(),
-                Set.of(lagFødselsdatoForVoksen()),
-                Set.of(new Folkeregisteridentifikator(IDENT_HOVEDPERSON, lagAktivMetadata())),
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Set.of(new Kjoenn(KjoennType.MANN, lagAktivMetadata())),
-                Collections.emptySet(),
-                Set.of(new Navn("KARAFFEL", "", "TRIVIELL", lagAktivMetadata())),
-                Collections.emptySet(),
-                Set.of(
-                        new Sivilstand(Sivilstandstype.GIFT,
-                                IDENT_PERSON_GIFT,
-                                LocalDate.of(2011, 2, 2),
-                                null,
-                                lagAktivMetadata(toLocalDateTime("2020-12-05T08:32:21"))),
-                        new Sivilstand(Sivilstandstype.GIFT,
-                                IDENT_PERSON_GIFT_HISTORISK,
-                                LocalDate.of(2019, 8, 3),
-                                null,
-                                lagAktivMetadata(toLocalDateTime("2022-04-27T14:57:56"))),
-                        new Sivilstand(Sivilstandstype.SEPARERT,
-                                IDENT_PERSON_GIFT_HISTORISK,
-                                LocalDate.of(2013, 1, 3),
-                                null,
-                                lagHistoriskMetadata(toLocalDateTime("2022-04-28T13:28:43"))),
-                        new Sivilstand(Sivilstandstype.SKILT,
-                                NULL_IDENT_NÅR_SKILT,
-                                LocalDate.of(2014, 4, 9),
-                                null,
-                                lagHistoriskMetadata(toLocalDateTime("2022-05-04T12:20:45")))
-                ),
-                Set.of(new Statsborgerskap("NOR", LocalDate.parse("2021-05-08"), null, null, lagAktivMetadata(LocalDateTime.MAX))),
-                Collections.emptySet());
+            Collections.emptySet(),
+            Set.of(lagNorskBostedsadresse()),
+            Collections.emptySet(),
+            Set.of(lagFødselsdatoForVoksen()),
+            Set.of(new Folkeregisteridentifikator(IDENT_HOVEDPERSON, lagAktivMetadata())),
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Set.of(new Kjoenn(KjoennType.MANN, lagAktivMetadata())),
+            Collections.emptySet(),
+            Set.of(new Navn("KARAFFEL", "", "TRIVIELL", lagAktivMetadata())),
+            Collections.emptySet(),
+            lagSivilstandForHovedperson(),
+            Set.of(new Statsborgerskap("NOR", LocalDate.parse("2021-05-08"), null, null, lagAktivMetadata(LocalDateTime.MAX))),
+            Collections.emptySet());
+    }
+
+    @NotNull
+    public static Set<Sivilstand> lagSivilstandForHovedperson() {
+        return Set.of(
+            new Sivilstand(Sivilstandstype.GIFT,
+                IDENT_PERSON_GIFT_HISTORISK,
+                LocalDate.of(2020, 5, 4),
+                null,
+                lagAktivMetadata(toLocalDateTime("2020-04-27T14:57:56"))),
+            new Sivilstand(Sivilstandstype.SEPARERT,
+                IDENT_PERSON_GIFT_HISTORISK,
+                LocalDate.of(2020, 6, 4),
+                null,
+                lagHistoriskMetadata(toLocalDateTime("2020-04-28T13:28:43"))),
+            new Sivilstand(Sivilstandstype.SKILT,
+                NULL_IDENT_NÅR_SKILT,
+                LocalDate.of(2020, 7, 4),
+                null,
+                lagHistoriskMetadata(toLocalDateTime("2020-05-04T12:20:45"))),
+            new Sivilstand(Sivilstandstype.GIFT,
+                IDENT_PERSON_GIFT,
+                LocalDate.of(2023, 1, 1),
+                null,
+                lagAktivMetadata(toLocalDateTime("2022-12-05T08:32:21")))
+        );
+    }
+
+    @NotNull
+    private static Set<Sivilstand> lagSivilstandForHovedperson_korrigertMedSammeDato() {
+        LocalDateTime korrigeringsTid = toLocalDateTime("2023-04-27T14:57:56");
+        return Set.of(
+            new Sivilstand(Sivilstandstype.GIFT,
+                IDENT_PERSON_GIFT_HISTORISK,
+                LocalDate.of(2020, 5, 4),
+                null,
+                lagAktivMetadataMedKorrigering(toLocalDateTime("2020-04-27T14:57:56"), korrigeringsTid)),
+            new Sivilstand(Sivilstandstype.SEPARERT,
+                IDENT_PERSON_GIFT_HISTORISK,
+                LocalDate.of(2020, 6, 4),
+                null,
+                lagHistoriskMetadataMedKorrigering(toLocalDateTime("2020-04-28T13:28:43"), korrigeringsTid)),
+            new Sivilstand(Sivilstandstype.SKILT,
+                NULL_IDENT_NÅR_SKILT,
+                LocalDate.of(2020, 7, 4),
+                null,
+                lagHistoriskMetadataMedKorrigering(toLocalDateTime("2020-05-04T12:20:45"), korrigeringsTid)),
+            new Sivilstand(Sivilstandstype.GIFT,
+                IDENT_PERSON_GIFT,
+                LocalDate.of(2023, 1, 1),
+                null,
+                lagAktivMetadata(toLocalDateTime("2022-12-05T08:32:21")))
+        );
     }
 
     public static Person lagPersonGift() {
         return new Person(
-                Collections.emptySet(),
-                Set.of(lagNorskBostedsadresse()),
-                Collections.emptySet(),
-                Set.of(lagFødselsdatoForVoksen()),
-                Set.of(new Folkeregisteridentifikator(IDENT_PERSON_GIFT, lagAktivMetadata())),
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Set.of(new Kjoenn(KjoennType.KVINNE, lagAktivMetadata())),
-                Collections.emptySet(),
-                Set.of(new Navn(PERSON_GIFT_FORNAVN, "", "GYNGEHEST", lagAktivMetadata())),
-                Collections.emptySet(),
-                Set.of(
-                        new Sivilstand(Sivilstandstype.GIFT,
-                                IDENT_HOVEDPERSON,
-                                LocalDate.of(2019, 8, 3),
-                                null,
-                                lagAktivMetadata(toLocalDateTime("2020-12-05T08:32:21")))
-                ),
-                Set.of(new Statsborgerskap("NOR", LocalDate.parse("2021-05-08"), null, null, lagAktivMetadata(LocalDateTime.MAX))),
-                Collections.emptySet());
+            Collections.emptySet(),
+            Set.of(lagNorskBostedsadresse()),
+            Collections.emptySet(),
+            Set.of(lagFødselsdatoForVoksen()),
+            Set.of(new Folkeregisteridentifikator(IDENT_PERSON_GIFT, lagAktivMetadata())),
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Set.of(new Kjoenn(KjoennType.KVINNE, lagAktivMetadata())),
+            Collections.emptySet(),
+            Set.of(new Navn(PERSON_GIFT_FORNAVN, "", "GYNGEHEST", lagAktivMetadata())),
+            Collections.emptySet(),
+            Set.of(
+                new Sivilstand(Sivilstandstype.GIFT,
+                    IDENT_HOVEDPERSON,
+                    LocalDate.of(2019, 8, 3),
+                    null,
+                    lagAktivMetadata(toLocalDateTime("2020-12-05T08:32:21")))
+            ),
+            Set.of(new Statsborgerskap("NOR", LocalDate.parse("2021-05-08"), null, null, lagAktivMetadata(LocalDateTime.MAX))),
+            Collections.emptySet());
     }
-
-    public static Person lagPersonGiftHistorisk() {
-        return new Person(
-                Collections.emptySet(),
-                Set.of(lagNorskBostedsadresse()),
-                Collections.emptySet(),
-                Set.of(lagFødselsdatoForVoksen()),
-                Set.of(new Folkeregisteridentifikator(IDENT_PERSON_GIFT_HISTORISK, lagAktivMetadata())),
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Collections.emptySet(),
-                Set.of(new Kjoenn(KjoennType.KVINNE, lagAktivMetadata())),
-                Collections.emptyList(),
-                Set.of(new Navn("ROTAT", "", "KAFFE", lagAktivMetadata())),
-                Collections.emptyList(),
-                Set.of(
-                        new Sivilstand(Sivilstandstype.GIFT,
-                                IDENT_HOVEDPERSON,
-                                LocalDate.of(2019, 8, 3),
-                                null,
-                                lagAktivMetadata(toLocalDateTime("2022-04-27T14:57:56"))),
-                        new Sivilstand(Sivilstandstype.SEPARERT,
-                                IDENT_HOVEDPERSON,
-                                LocalDate.of(2013, 1, 3),
-                                null,
-                                lagHistoriskMetadata(toLocalDateTime("2022-04-28T13:28:43"))),
-                        new Sivilstand(Sivilstandstype.SKILT,
-                                NULL_IDENT_NÅR_SKILT,
-                                LocalDate.of(2014, 4, 9),
-                                null,
-                                lagHistoriskMetadata(toLocalDateTime("2022-05-04T12:20:45")))
-                ),
-                Set.of(new Statsborgerskap("NOR", LocalDate.parse("2021-05-08"), null, null, lagAktivMetadata(LocalDateTime.MAX))),
-                Collections.emptyList());
-    }
-
 
     public static Behandling lagBehandling() {
         Behandling behandling = new Behandling();
@@ -202,20 +197,20 @@ public class FamiliemedlemObjectFactory {
 
     public static Bostedsadresse lagNorskBostedsadresse() {
         return new Bostedsadresse(
-                LocalDateTime.of(2015, 1, 1, 0, 0, 0),
-                LocalDateTime.of(2999, 5, 5, 0, 0, 0),
-                "Kongen",
-                new Vegadresse(
-                        "Slottsplassen 1",
-                        "1",
-                        null,
-                        "",
-                        "0010"
-                ),
+            LocalDateTime.of(2015, 1, 1, 0, 0, 0),
+            LocalDateTime.of(2999, 5, 5, 0, 0, 0),
+            "Kongen",
+            new Vegadresse(
+                "Slottsplassen 1",
+                "1",
                 null,
-                null,
-                null,
-                lagAktivMetadata(LocalDateTime.of(2022, 6, 26, 13, 37, 0)));
+                "",
+                "0010"
+            ),
+            null,
+            null,
+            null,
+            lagAktivMetadata(LocalDateTime.of(2022, 6, 26, 13, 37, 0)));
     }
 
     public static Metadata lagAktivMetadata() {
@@ -224,12 +219,28 @@ public class FamiliemedlemObjectFactory {
 
     public static Metadata lagAktivMetadata(LocalDateTime registrertDato) {
         return new Metadata("PDL", false,
-                List.of(new Endring(OPPRETT, registrertDato, "Z123456")));
+            List.of(new Endring(OPPRETT, registrertDato, "Z123456")));
+    }
+
+    public static Metadata lagAktivMetadataMedKorrigering(LocalDateTime registrertDato,
+                                                          LocalDateTime korrigeringDato) {
+        return new Metadata("PDL", false,
+            List.of(new Endring(OPPRETT, registrertDato, "Z123456"),
+                new Endring(KORRIGER, korrigeringDato, "Z123456"))
+        );
+    }
+
+    public static Metadata lagHistoriskMetadataMedKorrigering(LocalDateTime registrertDato,
+                                                              LocalDateTime korrigeringDato) {
+        return new Metadata("PDL", true,
+            List.of(new Endring(OPPRETT, registrertDato, "Z123456"),
+                new Endring(KORRIGER, korrigeringDato, "Z123456"))
+        );
     }
 
     public static Metadata lagHistoriskMetadata(LocalDateTime registrertDato) {
         return new Metadata("PDL", true,
-                List.of(new Endring(OPPRETT, registrertDato, "Z123456")));
+            List.of(new Endring(OPPRETT, registrertDato, "Z123456")));
     }
 
     private static LocalDateTime toLocalDateTime(String localDateTime) {
@@ -239,7 +250,7 @@ public class FamiliemedlemObjectFactory {
     @NotNull
     private static Set<ForelderBarnRelasjon> lagForelderBarnRelasjoner() {
         return Set.of(new ForelderBarnRelasjon(IDENT_BARN, Familierelasjonsrolle.BARN, Familierelasjonsrolle.MOR, lagAktivMetadata()),
-                new ForelderBarnRelasjon("forelderIdent", Familierelasjonsrolle.MOR, Familierelasjonsrolle.BARN, lagAktivMetadata()));
+            new ForelderBarnRelasjon("forelderIdent", Familierelasjonsrolle.MOR, Familierelasjonsrolle.BARN, lagAktivMetadata()));
     }
 
     @NotNull
